--- a/detail/card/card/gaoguan/gaoguan.wxml
+++ b/detail/card/card/gaoguan/gaoguan.wxml
@@ -78,12 +78,15 @@
             <view catchtap='viewpic' class='comment-item-content-pic' style='width:200rpx;height:200rpx;margin-top:10px;margin-bottom:10px;'>
               <image mode="aspectFill"  data-src="https://chengjiushuangxiang.com/Martin/tp5/public/upload/{{data[index]['comment_pic']}}" style='width:200rpx;height:200rpx;' src="https://chengjiushuangxiang.com/Martin/tp5/public/upload/{{data[index]['comment_pic']}}"></image>
             </view>
+            <view wx:if="{{openid==data[index]['comment_openid'] ? true:false}}" data-commentid="{{data[index]['comment_id']}}" catchtap='delete_comment'>
+              <text style='color:red;font-size:15px;'>删除</text>
+            </view>
             <view class='comment-item-content-pinglun-button'>
               <image class="pinglun-icon" src='../../../../images/pinglun.png' data-comment_id="{{data[index]['comment_id']}}" catchtap='pinglun'></image>
             </view>
             <view class='item-container'>
               <view class='comment-item-content-pinglun' >
-              <view class='pinglun-item' wx:if="{{pinglun[pindex]['pinglun_comment_id'] == data[index]['comment_id']}}"  wx:for="{{pinglun}}" wx:for-index='pindex'>
+              <view class='pinglun-item' wx:if="{{pinglun[pindex]['pinglun_comment_id'] == data[index]['comment_id']}}"  wx:for="{{pinglun}}" wx:for-index='pindex' wx:for-index='pindex' bindtap='commentpinglun' id="{{pinglun[pindex]['pinglun_name']}}" data-commentid="{{data[index]['comment_id']}}" >
                   <text class='pinglun-name'>{{pinglun[pindex]['pinglun_name']}} : </text>
                   <text class='pinglun-content'>{{pinglun[pindex]['pinglun_content']}}</text>
               </view>
@@ -134,4 +137,9 @@
     </view>
   </modal> 
 
+  <modal hidden="{{hiddenmodalput2}}" showCancel="false" title="回复{{someone}}" confirm-text="提交" cancel-text="取消" bindcancel="cancel2" bindconfirm="confirm2" >  
+    <view class="section">
+      <input type='text'placeholder="请输入内容" bindinput='input'/> 
+    </view>
+  </modal> 
 </view>
