--- a/detail/challenge/challenge.wxml
+++ b/detail/challenge/challenge.wxml
@@ -21,12 +21,49 @@
 
     <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:2400px" bindchange="bindChange">
       <swiper-item>
-        <view class='juzhong'><text class='zanbu'>敬请期待第一期挑战上线</text></view>
+        <view class='bg'>
+          <view class="post-container" >
+            <view wx:for="{{challenge}}" wx:key='{{index}}' class='grid-item' >  
+                <view catchtap='baomingImp' data-activitynum='{{item.id}}' data-baoming='{{item.baoming}}'>
+                  <view class='title-container'>
+                      <text class="post-title">{{item.name}}{{item.baoming==1?'':' - 已报名'}}</text>
+                  </view>
+                  <image style='width:100%;' src='{{item.tov}}'></image>
+                  <view class='content-container'>
+                    <text class="post-content">{{item.desc}}</text>
+                  </view>  
+                </view>   
+            </view> 
+          </view>
+        </view>
       </swiper-item>
 
 
       <swiper-item>
-        <view class='juzhong'><text class='zanbu'>敬请期待第一期挑战上线</text></view>
+        <view class='rank-container' >
+          <view style='border-top:1px solid #006666;width:90%;margin-top:20px;margin-left:20px;'></view>
+          <view class='rank-item-container' wx:for="{{data}}" wx:key='{{index}}'>
+            <view class='rank-item'>
+              <view class='rank-pic-container'>
+                <image wx:if="{{index < 3}}" src='/images/medal{{index}}.png' class='rank-pic'></image>
+              </view>
+              <text style='margin-top:15px;color:#006666;'>{{index+1}}</text>
+
+              <view class='rank-user-ava-container'>
+                <image class='rank-user-ava' src='{{item.touxiang}}'></image>
+              </view>
+              <view class='rank-name'>
+                <view class='rank-name-container'>
+                  <text class='rank-name-font'>{{item['name']}}</text>
+                </view>
+              </view>
+              <view class='rank-int'>
+                <text class='rank-int-font'>{{item['score']}}</text>
+              </view>
+            </view>
+            <view style='border-top:1px solid #006666;width:90%;margin-left:20px;'></view>
+          </view>
+        </view>
       </swiper-item>
 
     </swiper>
